--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>CSS | Frameworks</title>
   <link rel="stylesheet" href="dist/css/index.css">
   <script type="module" src="/js/index.js"></script>
+  <script src="https://kit.fontawesome.com/c4698ad2a1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -15,68 +16,39 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <!-- <img src="" alt="Logo" width="30" height="24" class="d-inline-block align-text-top"> -->
-          <span class="navbar-brand mb-0 h1">Navbar</span>
+          <span class="navbar-brand mb-0 h1">BlogLife</span>
         </a>
       </div>
     </nav>
   </header>
   <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">Column 1</div>
-        <div class="col-md-4">Column 2</div>
-        <div class="col-md-4">Column 3</div>
-      </div>
-    </div>
-    <div class="container">
-      <p>Your content stays in the middle of the page with equal padding left and right.</p>
-    </div>
-    <div class="container-fluid">
-      <p>Your content spans the entire width</p>
-    </div>
-    <div class="container-sm">100% wide until small breakpoint</div>
-    <div class="container-md">100% wide until medium breakpoint</div>
-    <div class="container-lg">100% wide until large breakpoint</div>
-    <div class="container-xl">100% wide until extra large breakpoint</div>
-    <div class="container-xxl">100% wide until extra extra large breakpoint</div>
-    <div class="container">
-      <div class="row">
-        // Columns go here
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          // Column content goes here
+    <div class="container col-lg-5 col-sm-7 col-md-5 d-flex align-items-center justify-content-center vh-80 flex-column">
+      <form action="html/profile/index.html" class="p-4 rounded bg-white">
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">
+            <i class="fa-solid fa-user" style="color: #34435E;"></i>
+          </span>
+          <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" control-id="ControlID-5">
         </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-8">
-          // Column content goes here
+        <div>
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">
+              <i class="fa-solid fa-lock" style="color: #34435E;"></i>
+            </span>
+            <input type="password" id="inputPassword6" class="form-control" minlength="8" maxlength="20" placeholder="Your password" aria-label="Password" aria-describedby="passwordHelpBlock" control-id="ControlID-5">
+          </div>
+          <div id="passwordHelpBlock" class="form-text">
+            Your password must be 8-20 characters long.
+          </div>
         </div>
-        <div class="col-4">
-          // Column content goes here
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Remember me</label>
         </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-6 col-sm-7 col-md-8 col-xl-9">
-          // Column content goes here
-        </div>
-        <div class="col-6 col-sm-5 col-md-4 col-xl-3">
-          // Column content goes here
-        </div>
-      </div>
-    </div>
-    <div class="btn-group">
-      <button class="btn btn-primary">Primary</button>
-      <div class="btn btn-info">Info</div>
-      <a href="#" class="btn btn-danger">Danger</a>
-      <input type="reset" class="btn btn-warning" value="Warning">
-      <input type="submit" class="btn btn-success" value="Success">
+        <button type="submit" class="btn btn-primary">Log in</button>
+        <a class="dropdown-item pt-3" href="#">New around here? Sign up</a>
+        <a class="dropdown-item" href="#">Forgot password?</a>
+      </form>
     </div>
   </main>
   <footer></footer>
