--- a/html/profile/index.html
+++ b/html/profile/index.html
@@ -97,12 +97,7 @@
                                 class="rounded-circle me-2 object-fit-cover">
                             <div class="d-flex flex-column">
                                 <strong class="h3">Kine</strong>
-                                <!-- <div class="d-flex gap-3 bs-component mt-4 ">
-                                    <p>Posts:<strong id="posts" class="ps-2">0</strong></p>
-                                    <p>Followers:<strong class="ps-2">120</strong> </p>
-                                    <p>Following:<strong class="ps-2">30</strong> </p>
-                                    </p>
-                                </div> -->
+                                <p>Hi there! <i class="fa-solid fa-face-smile-beam"></i></p>
                                 <button type="button" class="btn btn-outline-primary">Follow</button>
                             </div>
 
