--- a/html/feed/index.html
+++ b/html/feed/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="../../dist/css/index.css">
     <script type="module" src="../../js/index.js"></script>
-
+    <script defer src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/c4698ad2a1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -81,7 +81,9 @@
                             <div class="collapse navbar-collapse gap-1" id="navbarSupportedContent">
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                     <li class="nav-item">
-                                        <a class="nav-link disabled" aria-current="page" href="#"><h1 class="h5">Feed</h1></a>
+                                        <a class="nav-link disabled" aria-current="page" href="#">
+                                            <h1 class="h5">Feed</h1>
+                                        </a>
                                     </li>
                                 </ul>
                                 <div class="btn-group">
@@ -119,13 +121,12 @@
                                 </span>
                                 <input type="text" class="form-control" placeholder="Title" aria-label="Title">
                             </div>
-                            <textarea class="form-control" name="" id="" cols="" rows="5" placeholder="Whats on your mind?"></textarea>
-                            <div class="d-flex align-items-center" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <textarea class="form-control" name="" id="" cols="" rows="5"
+                                placeholder="Whats on your mind?"></textarea>
+                            <div class="d-flex align-items-center" data-bs-toggle="dropdown" aria-expanded="false">
                             </div>
                             <div class="d-flex justify-content-end mt-2 gap-4">
-                                <input class="form-control " type="file" id="formFile"
-                                    control-id="ControlID-33">
+                                <input class="form-control " type="file" id="formFile" control-id="ControlID-33">
                                 <button class="btn btn-success rounded-pill px-3" type="button">Post</button>
                             </div>
                         </div>
