--- a/html/profile/index.html
+++ b/html/profile/index.html
@@ -7,6 +7,7 @@
     <title>BlogLife | Profile</title>
     <link rel="stylesheet" href="../../dist/css/index.css">
     <script type="module" src="../../js/index.js"></script>
+    <script defer src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/c4698ad2a1.js" crossorigin="anonymous"></script>
 </head>
 
