--- a/html/profile/index.html
+++ b/html/profile/index.html
@@ -7,7 +7,7 @@
     <title>BlogLife | Profile</title>
     <link rel="stylesheet" href="../../dist/css/index.css">
     <script type="module" src="../../js/index.js"></script>
-    <script defer src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c4698ad2a1.js" crossorigin="anonymous"></script>
 </head>
 
