--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <i class="fa-solid fa-user" style="color: #34435E;"></i>
           </span>
           <input type="text" class="form-control" placeholder="Username" aria-label="Username"
-            aria-describedby="basic-addon1" control-id="ControlID-5">
+            aria-describedby="basic-addon1" control-id="ControlID-5" required>
         </div>
         <div>
           <div class="input-group mb-3">
@@ -41,11 +41,11 @@
             </span>
             <input type="password" id="inputPassword6" class="form-control" minlength="8" maxlength="20"
               placeholder="Your password" aria-label="Password" aria-describedby="passwordHelpBlock"
-              control-id="ControlID-5">
+              control-id="ControlID-5" required>
           </div>
-          <div id="passwordHelpBlock" class="form-text">
+          <!-- <div id="passwordHelpBlock" class="form-text">
             Your password must be 8-20 characters long.
-          </div>
+          </div> -->
         </div>
         <div class="mb-3 form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
